edit view flight

--- a/app/views/airstrips/_form.html.erb
+++ b/app/views/airstrips/_form.html.erb
@@ -17,7 +17,7 @@
     </div>
 
     <div class="field">
-      <%= f.label :sanbayden %>
+      <%= f.label :end %>
       <%= collection_select( :airstrip, :end , Airport.all , :id, :name, {:prompt => true, :multiple=>true } ) %>
     </div>
 
