--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -13,7 +13,6 @@
       <th>Grade</th>
       <th>Pricelevel</th>
       <th>Slot</th>
-      <th>Price</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -22,14 +21,13 @@
     <% @flights.each do |flight| %>
       <tr>
         <td><%= Airway.find(flight.way).code%></td>
-        <td><%= Airway.find(flight.way).start%></td>
-        <td><%= Airway.find(flight.way).end%></td>
+        <td><%= Airport.find(Airway.find(flight.way).start).code %></td>
+        <td><%= Airport.find(Airway.find(flight.way).end).code%></td>
         <td><%= Airway.find(flight.way).day%></td>
         <td><%= Airway.find(flight.way).time%></td>
         <td><%= flight.grade %></td>
-        <td><%= flight.pricelevel %></td>
+        <td><%= Pricelevel.find(flight.pricelevel).name %></td>
         <td><%= flight.slot %></td>
-        <td><%= flight.price %></td>
         <td><%= link_to 'Show', flight %></td>
         <td><%= link_to 'Edit', edit_flight_path(flight) %></td>
         <td><%= link_to 'Destroy', flight, method: :delete, data: { confirm: 'Are you sure?' } %></td>
