--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 </head>
 
-<body>
+<body class="container">
 <nav class="navbar navbar-default">
   <% if notice %>
       <p class="alert alert-success"><%= notice %></p>
@@ -25,7 +25,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/datves">Đặt vé</a>
+      <a class="navbar-brand" href="/bookings">Đặt vé</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -59,6 +59,9 @@
 <% if alert %>
     <p class="alert alert-danger"><%= alert %></p>
 <% end %>
-<%= yield %>
+<div class="main" style="margin-left: 450px">
+  <%= yield %>
+</div>
+
 </body>
 </html>
